feat:   - Added safe-mode parameter to getJokes.   - Basic signal store.   - Basic joke rendering.   - Modify routes to load store by Jokes feature.

--- a/src/app/features/jokes/pages/joke-list/joke-list.component.html
+++ b/src/app/features/jokes/pages/joke-list/joke-list.component.html
@@ -1,1 +1,19 @@
-<p>joke-list works!</p>
+@if (store.isLoading()) {
+  <p>Loading jokes...</p>
+} @else if (store.error()) {
+  <p>Error: {{ store.error() }}</p>
+} @else {
+  @for (joke of store.jokes(); track joke.id; let first = $first) {
+    <article>
+      @if (!first) {
+        <hr />
+      }
+      @if (joke.type === JokeType.SINGLE) {
+        <p>{{ joke.joke }}</p>
+      } @else {
+        <p>{{ joke.setup }}</p>
+        <p>{{ joke.delivery }}</p>
+      }
+    </article>
+  }
+}
