--- a/src/app/features/jokes/pages/jokes/jokes.component.html
+++ b/src/app/features/jokes/pages/jokes/jokes.component.html
@@ -1,5 +1,3 @@
-<nav>
-  <a routerLink="/jokes/list" routerLinkActive="active">Browse Jokes</a>
-  <a routerLink="/jokes/submit" routerLinkActive="active">Submit Joke</a>
-</nav>
-<router-outlet />
+<div class="jokes-container">
+  <router-outlet />
+</div>
