--- a/src/styles/_tokens.scss
+++ b/src/styles/_tokens.scss
@@ -46,6 +46,7 @@ $size-12-px: 12px;
 $size-16-px: 16px;
 $size-20-px: 20px;
 $size-24-px: 24px;
+$size-32-px: 32px;
 $size-36-px: 36px;
 $size-48-px: 48px;
 $size-64-px: 64px;
@@ -61,6 +62,7 @@ $spacing-8-px: 8px;
 $spacing-12-px: 12px;
 $spacing-20-px: 20px;
 $spacing-24-px: 24px;
+$spacing-32-px: 32px;
 $spacing-36-px: 36px;
 $spacing-48-px: 48px;
 $spacing-64-px: 64px;
