--- a/src/app/features/jokes/pages/joke-list/joke-list.component.scss
+++ b/src/app/features/jokes/pages/joke-list/joke-list.component.scss
@@ -5,6 +5,9 @@
   max-width: $container-max-width;
   padding: $spacing-24-px;
   margin-inline: auto;
+  display: flex;
+  flex-direction: column;
+  gap: $spacing-32-px;
 }
 
 .jokes {
@@ -13,6 +16,11 @@
   gap: $spacing-8-px;
 }
 
+.search-bar {
+  width: 100%;
+}
+
 .title {
+  margin-block: 0;
   margin-inline: auto;
 }
