--- a/src/app/shared/components/badge/badge.component.scss
+++ b/src/app/shared/components/badge/badge.component.scss
@@ -9,5 +9,5 @@
   display: inline-block;
   padding: $spacing-4-px $spacing-12-px;
   border-radius: $border-radius-circle;
-  border: 1px solid $color-border;
+  border: $size-1-px solid $color-border;
 }
