--- a/src/app/features/jokes/pages/joke-list/joke-list.component.scss
+++ b/src/app/features/jokes/pages/joke-list/joke-list.component.scss
@@ -20,8 +20,20 @@
   margin-inline: auto;
 }
 
-.search {
+.search-container {
   width: 100%;
+  display: flex;
+  align-items: center;
+  gap: $spacing-16-px;
+}
+
+.search-form {
+  display: inline-block;
+  flex: 1;
+
+  &__bar {
+    width: 100%;
+  }
 }
 
 .title {
