--- a/src/styles/_tokens.scss
+++ b/src/styles/_tokens.scss
@@ -60,6 +60,7 @@ $spacing-2-px: 2px;
 $spacing-4-px: 4px;
 $spacing-8-px: 8px;
 $spacing-12-px: 12px;
+$spacing-16-px: 16px;
 $spacing-20-px: 20px;
 $spacing-24-px: 24px;
 $spacing-32-px: 32px;
