--- a/src/app/features/jokes/pages/jokes/jokes.component.html
+++ b/src/app/features/jokes/pages/jokes/jokes.component.html
@@ -1,4 +1,6 @@
 <div class="wiki-jokes">
-  <h1 class="title">WikiJokes</h1>
+  <header>
+    <h1 class="title">WikiJokes</h1>
+  </header>
   <router-outlet />
 </div>
