--- a/src/styles/_tokens.scss
+++ b/src/styles/_tokens.scss
@@ -14,17 +14,20 @@ $border-radius-l: 12px;
 
 // Background Colors
 $color-background: #fff;
+$color-background-active: #21225f;
 $color-background-secondary: #f8f9fc;
 $color-elevation-surface: #fff;
 
 // Border Colors
 $color-border: #b2b2e4;
 $color-border-secondary: #e2e4f0;
+$color-border-active: #fff;
 
 // Content Colors
 $color-icon-subtle: #6d6e9c;
 $color-secondary-500: #2d2e83;
 $color-text: #21225f;
+$color-text-active: #f8f9fc;
 $color-text-subtle: #6d6e9c;
 
 // --------------------------------------------
