feat: Prepare joke submit form.

--- a/src/app/features/jokes/pages/joke-list/joke-list.component.html
+++ b/src/app/features/jokes/pages/joke-list/joke-list.component.html
@@ -2,7 +2,7 @@
   <div class="search-container">
     <form class="search-form" [formGroup]="searchJokesForm">
       <input
-        sekSearchInput
+        sekInput
         class="search-form__bar"
         type="search"
         placeholder="find a joke"
