--- a/src/styles/_tokens.scss
+++ b/src/styles/_tokens.scss
@@ -29,6 +29,7 @@ $color-secondary-500: #2d2e83;
 $color-text: #21225f;
 $color-text-active: #f8f9fc;
 $color-text-subtle: #6d6e9c;
+$color-text-error: #a00;
 
 // --------------------------------------------
 // Layout
