--- a/src/app/features/jokes/pages/joke-submit/joke-submit.component.scss
+++ b/src/app/features/jokes/pages/joke-submit/joke-submit.component.scss
@@ -1,6 +1,10 @@
 @use 'tokens' as *;
 @use 'mixins' as *;
 
+.error {
+  color: $color-text-error;
+}
+
 .joke-submit-container {
   margin-top: $spacing-16-px;
   display: flex;
@@ -26,6 +30,12 @@
   }
 }
 
+.loader {
+  display: block;
+  width: fit-content;
+  margin-inline: auto;
+}
+
 .submit-button {
   align-self: flex-end;
 }
@@ -35,7 +45,7 @@
   align-items: center;
   width: 100%;
 
-  &__back-button {
+  &__nav {
     position: absolute;
 
     ng-icon {
