--- a/src/app/shared/components/buttons-option-list/buttons-option-list.component.html
+++ b/src/app/shared/components/buttons-option-list/buttons-option-list.component.html
@@ -9,6 +9,7 @@
   @for (option of options(); track option.value) {
     <button
       [attr.id]="option.value"
+      type="button"
       role="option"
       [attr.aria-selected]="isOptionSelected(option.value)"
       sekButton
